--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ conf.toml
 # Anything in DB
 *.json
 
+# And the log file
+wheatley.log
+
+# Anything below here is the GitHub provided Python gitignore
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
